--- a/examples/experimental/treemap/package.json
+++ b/examples/experimental/treemap/package.json
@@ -11,7 +11,8 @@
     "deck.gl": "^6.2.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "react-map-gl": "^3.3.0"
+    "react-map-gl": "^3.3.0",
+    "source-map-loader": "^0.2.4"
   },
   "devDependencies": {
     "buble": "^0.19.3",
