--- a/examples/experimental/cshapes/package.json
+++ b/examples/experimental/cshapes/package.json
@@ -8,10 +8,10 @@
     "build": "NODE_ENV=production webpack --env.prod=true"
   },
   "dependencies": {
-    "deck.gl": "^7.0.0-alpha",
+    "deck.gl": "^7.0.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "react-map-gl": "^3.3.0"
+    "react-map-gl": "^4.1.2"
   },
   "devDependencies": {
     "buble": "^0.19.3",
