--- a/examples/experimental/treemap/package.json
+++ b/examples/experimental/treemap/package.json
@@ -8,10 +8,10 @@
     "build": "NODE_ENV=production webpack --env.prod=true"
   },
   "dependencies": {
-    "deck.gl": "^7.0.0-alpha",
+    "deck.gl": "^7.0.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "react-map-gl": "^3.3.4",
+    "react-map-gl": "^4.1.2",
     "source-map-loader": "^0.2.4"
   },
   "devDependencies": {
